[tool.poetry]
name = "yt-downloader"
version = "0.1.0"
description = ""
authors = ["Nazar Annakhalov <nazar.annahalov@yandex.com>"]
readme = "README.md"
packages = [{include = "yt_downloader"}]

[tool.poetry.dependencies]
python = "^3.11"
pytube = "^15.0.0"
python-dotenv = "^1.0.0"
moviepy = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
